fix:fixed checked effect

--- a/cssBayan/css/style.css
+++ b/cssBayan/css/style.css
@@ -94,6 +94,10 @@ h2 {
 .accord_item_header {
   color: rgb(0, 0, 0);
 }
+.main:checked 
+.accord_item_header {
+  color: rgb(0, 0, 0);
+}
 .main:active
 .accord_item_header {
   color: rgb(0, 0, 0);
