--- a/cssBayan/css/media.css
+++ b/cssBayan/css/media.css
@@ -27,7 +27,10 @@
   display: none;
 }
 }
-@media all and (max-width: 820px) {
+@media all and (max-width: 821px) {
+  body {
+  cursor: none:
+  }
   header {
     margin-top: 5rem;
   }
@@ -66,7 +69,10 @@
     height: 7.5rem;
 }
 }
-@media all and (max-width: 320px) {
+@media all and (max-width: 321px) {
+   body {
+  cursor: none:
+  }
   header {
     margin-top: 4rem;
   }
