--- a/cssBayan/css/media.css
+++ b/cssBayan/css/media.css
@@ -91,8 +91,10 @@
   font-size: 1.0rem; 
 }
   .icon_open {
+    display: block;
     width: 1rem;
     height: 1rem;
+    transition: all 2s;
   }
   .icon_close {
     width: 0.6rem;
